fix(css): remove unnecessary whitespace and ensure consistent margin for table elements

--- a/static/style.css
+++ b/static/style.css
@@ -333,7 +333,7 @@ table {
   flex-shrink: 0;
   position: relative;
   margin: 0px;
-  
+
 }
 
 .sub-title {
@@ -347,6 +347,7 @@ table {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  margin: 0px;
 }
 
 .icon-history {
